@@ -5,7 +5,8 @@ Changelog
 3.5.4 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Fix tabbedview history.
+  [Kevin Bieri]
 
 
 3.5.3 (2016-09-27)
